--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,11 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="app_blue">#1f3ed9</color>
+    <color name="app_gray_light">#b1b1b1</color>
+    <color name="normal_white">#ffffff</color>
+    <color name="app_gray">#848484</color>
+
+
 </resources>
