--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -3,10 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".main.MainActivityFragment">
 
     <LinearLayout
@@ -20,11 +16,11 @@
             android:layout_weight="70"
             android:orientation="vertical" >
 
-            <RelativeLayout
-                android:layout_width="fill_parent"
-                android:layout_height="59dp"
-                android:background="@color/app_blue" >
-            </RelativeLayout>
+            <!--<RelativeLayout-->
+                <!--android:layout_width="fill_parent"-->
+                <!--android:layout_height="59dp"-->
+                <!--android:background="@color/app_blue" >-->
+            <!--</RelativeLayout>-->
 
             <RelativeLayout
                 android:layout_width="fill_parent"
