finalisation grossière graphique de la page de login

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -5,10 +5,18 @@
     xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
     tools:context=".main.MainActivityFragment">
 
+    <ImageView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/home_background"
+        android:scaleType="fitXY"
+
+        />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -16,26 +24,16 @@
             android:layout_weight="70"
             android:orientation="vertical" >
 
-            <!--<RelativeLayout-->
-                <!--android:layout_width="fill_parent"-->
-                <!--android:layout_height="59dp"-->
-                <!--android:background="@color/app_blue" >-->
-            <!--</RelativeLayout>-->
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:src="@drawable/logo_olivia"
+                android:layout_marginTop="50dp"/>
 
             <RelativeLayout
                 android:layout_width="fill_parent"
-                android:layout_height="match_parent"
-                android:background="@color/normal_white" >
-
-                <ImageView
-                    android:id="@+id/android_picture"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_centerVertical="true"
-                    android:layout_margin="30dp"
-                    android:contentDescription="splash"
-                    android:src="@drawable/oolivia_logo" />
+                android:layout_height="match_parent" >
 
                 <TextView
                     android:id="@+id/textView1"
@@ -52,16 +50,15 @@
         <RelativeLayout
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:layout_weight="30"
-            android:background="@color/app_gray" >
+            android:layout_weight="30" >
 
             <FrameLayout
                 android:id="@+id/frameLayout1"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_marginBottom="50dp"
-                android:layout_marginLeft="300dp"
-                android:layout_marginRight="300dp"
+                android:layout_marginLeft="400dp"
+                android:layout_marginRight="400dp"
                 android:layout_marginTop="50dp" >
                 <ListView
                     android:id="@+id/listViewProfiles"
@@ -69,7 +66,6 @@
                     android:layout_height="match_parent"
                     android:divider="@null"
                     android:dividerHeight="0dp">
-
                 </ListView>
 
             </FrameLayout>
