génération des matières procédurales OK mais reste les ajustements graphiques a faire

--- a/app/src/main/res/layout/fragment_new_profile.xml
+++ b/app/src/main/res/layout/fragment_new_profile.xml
@@ -12,7 +12,7 @@
         android:orientation="vertical">
 
         <EditText
-            android:id="@+id/textName"
+            android:id="@+id/textNameProfile"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -23,7 +23,7 @@
             android:hint="@string/name" />
 
         <EditText
-            android:id="@+id/textAge"
+            android:id="@+id/textAgeProfile"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:ems="10"
