--- a/app/src/main/res/layout/item_grid_subjects.xml
+++ b/app/src/main/res/layout/item_grid_subjects.xml
@@ -3,30 +3,37 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="50dp"
-        android:background="@drawable/astronaute"></RelativeLayout>
-    <TextView
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Mathématique"
-        android:textSize="48sp"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="15dp"
-        android:textColor="@color/normal_white"/>
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:text="Score : 12%"
-        android:textSize="30sp"
-        android:textColor="@color/normal_white"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="50dp"
-        android:layout_marginRight="15dp"/>
+        <ImageView
+            android:id="@+id/imageSubject"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/error_button" />
 
+        <TextView
+            android:id="@+id/textNameSubject"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
+            android:text="Mathématique"
+            android:textColor="@color/normal_white"
+            android:textSize="48sp" />
 
+        <TextView
+            android:id="@+id/textScoreSubject"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginBottom="50dp"
+            android:layout_marginRight="15dp"
+            android:text="Score : 12%"
+            android:textColor="@color/normal_white"
+            android:textSize="30sp" />
+
+    </RelativeLayout>
 </RelativeLayout>
