--- a/app/src/main/res/layout/item_list_profiles.xml
+++ b/app/src/main/res/layout/item_list_profiles.xml
@@ -22,14 +22,14 @@
             android:gravity="center_vertical|left">
 
             <TextView
-                android:id="@+id/textName"
+                android:id="@+id/textNameProfile"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
                 android:textColor="@color/normal_black"/>
 
             <TextView
-                android:id="@+id/textAge"
+                android:id="@+id/textAgeProfile"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@color/app_gray"
@@ -39,7 +39,7 @@
 
 
         <TextView
-            android:id="@+id/textPoint"
+            android:id="@+id/textScoreProfile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
