ajout de l'icone dans le bouton d'ajout de profils4

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -82,6 +82,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
-        materialdesign:animate="false"/>
+        materialdesign:animate="false"
+        materialdesign:iconDrawable="@drawable/ic_input_add"/>
 
 </RelativeLayout>
