--- a/app/src/main/res/layout/item_grid_subjects.xml
+++ b/app/src/main/res/layout/item_grid_subjects.xml
@@ -1,39 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_width="@dimen/subjects_button_size"
+    android:layout_height="300dp">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/subjects_button_size"
+    android:layout_centerInParent="true">
+
+    <ImageView
+        android:id="@+id/imageSubject"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/error_button" />
+
+    <TextView
+        android:id="@+id/textNameSubject"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:text=" "
+        android:textColor="@color/normal_white"
+        android:textSize="22sp" />
 
-        <ImageView
-            android:id="@+id/imageSubject"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/error_button" />
+    <TextView
+        android:id="@+id/textScoreSubject"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
+        android:text=" "
+        android:textColor="@color/normal_white"
+        android:textSize="20sp"
+        android:paddingBottom="3dp"/>
 
-        <TextView
-            android:id="@+id/textNameSubject"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="10dp"
-            android:text="Mathématique"
-            android:textColor="@color/normal_white"
-            android:textSize="48sp" />
+</RelativeLayout>
 
-        <TextView
-            android:id="@+id/textScoreSubject"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginBottom="50dp"
-            android:layout_marginRight="15dp"
-            android:text="Score : 12%"
-            android:textColor="@color/normal_white"
-            android:textSize="30sp" />
 
-    </RelativeLayout>
+
 </RelativeLayout>
