--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -9,9 +9,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:src="@drawable/home_background"
-        android:scaleType="fitXY"
-
-        />
+        android:scaleType="fitXY" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -80,8 +78,8 @@
         android:layout_height="@dimen/buttonAddProject_Diameter"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginBottom="24dp"
         materialdesign:animate="false"
         materialdesign:iconDrawable="@drawable/ic_input_add"/>
 
