- ajustement du background de l'accueil - changement des boutons et fond de la page des matières - début de la mise en page de la page de jeu

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,4 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.principal.projetolivia.MainActivity"
-    tools:ignore="MergeRootFrame" />
+    tools:ignore="MergeRootFrame" >
+
+    <com.principal.projetolivia.com.principal.projetolivia.util.CropImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/home_background"
+        android:scaleType="matrix"
+        android:id="@+id/mainBackground"/>
+
+</FrameLayout>
