--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -26,53 +26,15 @@
                     android:layout_weight="1"
                     android:id="@+id/question"/>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_margin="20dp"
-                        android:background="@color/green"
-                        android:layout_weight="1"
-                        android:id="@+id/answer1"/>
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_margin="20dp"
-                        android:background="@color/green"
-                        android:layout_weight="1"
-                        android:id="@+id/answer2"/>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_margin="20dp"
-                        android:background="@color/green"
-                        android:layout_weight="1"
-                        android:id="@+id/answer3"/>
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_margin="20dp"
-                        android:background="@color/green"
-                        android:layout_weight="1"
-                        android:id="@+id/answer4"/>
-
-                </LinearLayout>
+                <GridView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:numColumns="3"
+                    android:id="@+id/gridGame"
+                    android:gravity="center"
+                    android:columnWidth="@dimen/subjects_button_size"
+                    android:stretchMode="spacingWidthUniform"
+                    android:layout_centerInParent="true"/>
 
             </LinearLayout>
 
