--- a/app/src/main/res/layout/item_grid_subject_data.xml
+++ b/app/src/main/res/layout/item_grid_subject_data.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
+    android:paddingBottom="20dp">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -9,15 +11,17 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             android:id="@+id/imageOlivia"
-            android:src="@drawable/olivia_diplomee"/>
+            android:src="@drawable/olivia_simple"
+            android:layout_gravity="center_vertical"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_gravity="center_vertical">
 
             <TextView
                 android:id="@+id/textNameSubject"
@@ -26,6 +30,8 @@
                 android:text="Matière"
                 android:textSize="18sp"
                 android:layout_marginBottom="5dp"
+                android:layout_gravity="center_horizontal"
+                android:textStyle="italic"
                 />
 
             <LinearLayout
@@ -33,23 +39,29 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/textScoreSubject"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="score"
-                    />
+                <com.github.lzyzsd.circleprogress.DonutProgress
+                    android:id="@+id/scoreSubject"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    custom:donut_progress="0"
+                    android:layout_gravity="center_vertical"
+                    android:layout_margin="5dp"
+                    custom:donut_finished_color="#E6007E"
+                    custom:donut_text_color="#E6007E"/>
+
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:layout_gravity="center_vertical">
 
                     <TextView
                         android:id="@+id/textPlayedGamesSubject"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="played games"
+                        android:layout_gravity="center_horizontal"
                         />
 
                     <TextView
@@ -57,6 +69,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="right answers"
+                        android:layout_gravity="center_horizontal"
                         />
 
                     <TextView
@@ -64,6 +77,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="wrong answers"
+                        android:layout_gravity="center_horizontal"
                         />
 
                 </LinearLayout>
@@ -74,6 +88,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="high score"
+                android:layout_gravity="center_horizontal"
                 />
 
         </LinearLayout>
