fond statistiques profil

--- a/app/src/main/res/layout/fragment_subjects.xml
+++ b/app/src/main/res/layout/fragment_subjects.xml
@@ -53,7 +53,10 @@
 
         <ImageButton
             android:layout_width="30dp"
-            android:layout_height="30dp" />
+            android:layout_height="30dp"
+            android:src="@drawable/options"
+            android:background="@null"
+            android:scaleType="fitXY"/>
     </RelativeLayout>
 
 </RelativeLayout>
