--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -19,19 +19,19 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/question"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_margin="20dp"
                     android:background="@color/green"
                     android:layout_weight="1"
-                    android:id="@+id/question"/>
+                    />
 
                 <GridView
+                    android:id="@+id/gridGame"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:numColumns="3"
-                    android:id="@+id/gridGame"
-                    android:gravity="center"
+                    android:numColumns="2"
                     android:columnWidth="@dimen/subjects_button_size"
                     android:stretchMode="spacingWidthUniform"
                     android:layout_centerInParent="true"
@@ -43,14 +43,26 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="2">
-
-                <TextView
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_alignParentTop="true"
                     android:layout_margin="20dp"
-                    android:text="Temps : 10s\nPoints : 3"/>
+                    android:orientation="vertical">
+                    <TextView
+                        android:id="@+id/txtTimer"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Temps : 10s"/>
+                    <TextView
+                        android:id="@+id/txtScore"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Points : 3"/>
+                </LinearLayout>
+
+
             </RelativeLayout>
 
         </LinearLayout>
