--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,5 +23,8 @@
 
     <color name="app_gray_light">#b1b1b1</color>
     <color name="app_gray">#848484</color>
+    <color name="app_red">#F44336</color>
+    <color name="app_green">#4CAF50</color>
+
 
 </resources>
