--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -5,94 +5,84 @@
     tools:context="com.principal.projetolivia.main.GameFragment">
 
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:layout_above="@+id/inGameInfos">
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:weightSum="3">
 
-            <LinearLayout
+            <TextView
+                android:id="@+id/question"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_margin="20dp"
+                android:layout_weight="2"
+                android:background="@color/green" />
+
+            <GridView
+                android:id="@+id/gridGame"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_centerInParent="true"
                 android:layout_weight="1"
-                android:weightSum="3"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/question"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="20dp"
-                    android:background="@color/green"
-                    android:layout_weight="1"
-                    />
-
-                <GridView
-                    android:id="@+id/gridGame"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:numColumns="2"
-                    android:columnWidth="@dimen/subjects_button_size"
-                    android:stretchMode="spacingWidthUniform"
-                    android:layout_centerInParent="true"
-                    android:layout_weight="1"/>
-
-            </LinearLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="2">
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_margin="20dp"
-                    android:orientation="vertical">
-                    <TextView
-                        android:id="@+id/txtTimer"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Temps : 10s"/>
-                    <TextView
-                        android:id="@+id/txtGoodAnswers"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/profile_rightAnswers"/>
-                    <TextView
-                        android:id="@+id/txtBadAnswers"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/profile_wrongAnswers"/>
-                </LinearLayout>
-
-
-            </RelativeLayout>
+                android:columnWidth="@dimen/subjects_button_size"
+                android:numColumns="2"
+                android:stretchMode="spacingWidthUniform" />
 
         </LinearLayout>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:paddingRight="20dp"
-        android:paddingLeft="20dp"
-        android:paddingBottom="@dimen/subjects_options_vertical_padding"
-        android:paddingTop="@dimen/subjects_options_vertical_padding"
-        android:background="@color/app_gray_light"
-        android:id="@id/inGameInfos">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="2">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Matière"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"/>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                android:layout_margin="20dp"
+                android:orientation="vertical">
 
-        <ImageButton
-            android:layout_width="30dp"
-            android:layout_height="30dp" />
-    </RelativeLayout>
+                <TextView
+                    android:id="@+id/txtTimer"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Temps : 10s" />
+
+                <TextView
+                    android:id="@+id/txtGoodAnswers"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/profile_rightAnswers" />
+
+                <TextView
+                    android:id="@+id/txtBadAnswers"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/profile_wrongAnswers" />
+            </LinearLayout>
+
+            <com.gc.materialdesign.views.ButtonRectangle
+                android:id="@+id/btnStopGame"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:layout_margin="20dp"
+                android:background="@color/app_pink"
+                android:padding="20dp"
+                android:text="@string/stop_game" />
+
+
+        </RelativeLayout>
+
+    </LinearLayout>
 
 </RelativeLayout>
