--- a/app/src/main/res/layout/fragment_new_profile.xml
+++ b/app/src/main/res/layout/fragment_new_profile.xml
@@ -21,7 +21,8 @@
             android:paddingLeft="10dp"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="10dp"
-            android:hint="@string/name"/>
+            android:hint="@string/name"
+            android:inputType="textPersonName"/>
 
         <LinearLayout
             android:layout_width="match_parent"
