--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -25,20 +25,44 @@
             android:layout_marginBottom="20dp"
             android:layout_marginTop="20dp">
 
-            <TextView
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/bandeau_gauche"
+                android:scaleType="fitXY"/>
+
+            <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
+                android:background="#e6007e"
+                android:paddingLeft="25dp"
+                android:paddingRight="25dp">
+
+                <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:id="@+id/profileNameText"
                 android:text="UserName"
-                android:textSize="25sp"/>
+                android:textSize="25sp"
+                android:gravity="center"
+                    android:textColor="@color/normal_white"/>
+
+            </LinearLayout>
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/bandeau_droite"/>
 
             <TextView
                 android:id="@+id/profileAgeText"
                 android:layout_marginLeft="30dp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:text="22 ans"
-                android:textSize="15sp"/>
+                android:textSize="15sp"
+                android:gravity="center"/>
         </LinearLayout>
 
 
