correction temporaire du problème de gestion de mémoire + ajout des images de fond pour les différents jeux

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     <com.principal.projetolivia.com.principal.projetolivia.util.CropImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/home_background"
+        android:src="@drawable/background"
         android:scaleType="matrix"
         android:id="@+id/mainBackground"/>
 
